RESOLVED FIXED57566
Can't identify file entities with WebKit::WebContextMenuData enum
https://bugs.webkit.org/show_bug.cgi?id=57566
Summary Can't identify file entities with WebKit::WebContextMenuData enum
Zelidrag Hornung
Reported 2011-03-31 11:55:50 PDT
We need to be able to use ContextMenuParams for file entity identification for ChromeOS file browser. The only change needed on WK side is to add a new enum WebKit::WebContextMenuData value to WebContextMenuData::MediaType - MediaTypeFile.
Attachments
Added MediaTypeFile enum value to WebContextMenuData::MediaType (1.09 KB, patch)
2011-03-31 11:59 PDT, Zelidrag Hornung
no flags
Added MediaTypeFile enum value to WebContextMenuData::MediaType... with fix for Chromium side (1.28 KB, patch)
2011-04-05 19:56 PDT, Zelidrag Hornung
no flags
Zelidrag Hornung
Comment 1 2011-03-31 11:59:25 PDT
Created attachment 87774 [details] Added MediaTypeFile enum value to WebContextMenuData::MediaType
David Levin
Comment 2 2011-04-01 17:55:08 PDT
This is a trivial change and by itself it seems fine, but I find it hard to understand how this enum change does anything and why it is beneficial and if it useful (w/o doing any other changes in WebKit), why this enum is upstream at all. Thus my reluctance to r+.
David Levin
Comment 3 2011-04-05 11:46:48 PDT
Summary: There is a function/strucutre in WebKit that stores these enum values without caring what they are and a new one is needed for purposes on the Chromium side.
WebKit Commit Bot
Comment 4 2011-04-05 13:44:36 PDT
Comment on attachment 87774 [details] Added MediaTypeFile enum value to WebContextMenuData::MediaType Clearing flags on attachment: 87774 Committed r82976: <http://trac.webkit.org/changeset/82976>
WebKit Commit Bot
Comment 5 2011-04-05 13:44:41 PDT
All reviewed patches have been landed. Closing bug.
Shane Stephens
Comment 6 2011-04-05 18:46:48 PDT
Reopening this bug as we need to roll out the patch - it breaks chromium build
David Levin
Comment 7 2011-04-05 19:03:57 PDT
Here's how to do this patch in a way that won't break any builds. 1. Submit a patch on the chromium side which fixes the build for when this enum is added but ifdef all the places. Something like #ifdef WebContextMenuDataFileTypeDefined but with proper casing. 2. Put up with patch and add a #define WebContextMenuDataFileTypeDefined in the header file file. 3. Once it gets into chromium, you remove all the ifdef's and submit that patch. 4. Then one final patch in WebKit which removes #define WebContextMenuDataFileTypeDefined from this header.
Zelidrag Hornung
Comment 8 2011-04-05 19:56:30 PDT
Created attachment 88356 [details] Added MediaTypeFile enum value to WebContextMenuData::MediaType... with fix for Chromium side added new define WEBCONTEXT_MEDIATYPEFILE_DEFINED that should prevent Chromium build from breaking this needs to land after http://codereview.chromium.org/6799005/
WebKit Commit Bot
Comment 9 2011-04-05 23:30:12 PDT
Comment on attachment 88356 [details] Added MediaTypeFile enum value to WebContextMenuData::MediaType... with fix for Chromium side Clearing flags on attachment: 88356 Committed r83023: <http://trac.webkit.org/changeset/83023>
WebKit Commit Bot
Comment 10 2011-04-05 23:30:16 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 11 2011-04-06 01:52:46 PDT
http://trac.webkit.org/changeset/83023 might have broken GTK Linux 32-bit Debug
Note You need to log in before you can comment on or make changes to this bug.