2011-04-05  Zelidrag Hornung  <zelidrag@chromium.org>

Reviewed by David Levin.

        Added MediaTypeFile enum value to WebContextMenuData::MediaType.
        https://bugs.webkit.org/show_bug.cgi?id=57566

        * public/WebContextMenuData.h:

Canonical link: https://commits.webkit.org/72759@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82976 268f45cc-cd09-0410-ab3c-d52691b4dbfc