Source/WebKit/chromium/public/WebContextMenuData.h
@@ -52,6 +52,8 @@ struct WebContextMenuData {
         MediaTypeVideo,
         // An audio node is selected.
         MediaTypeAudio,
+        // A file node is selected.
+        MediaTypeFile,
         // A plugin node is selected.
         MediaTypePlugin,
     };
